<resources>
    <!--SignIn-->
    <string name="app_name">Introduce</string>
    <string name="id">아이디</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="pw">비밀번호</string>
    <string name="pw_confirm">비밀번호 재확인</string>
    <string name="hint_pw">비밀번호를 입력하세요.</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>

    <!--SignUp-->
    <string name="name">이름</string>
    <string name="hint_name">이름를 입력하세요.</string>
    <string name="email">이메일</string>
    <string name="hint_email">이메일을 입력하세요.</string>

    <string name="exit">종료</string>

</resources>